Fixes Merge conflicts